# FastRayGram

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.lite.yml  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  makefile  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.dev
backend/src/api/admin/: __init__.py
backend/src/api/app/: __init__.py
backend/src/core/: enums.py  exceptions.py  logger.py  settings.py  standarts.py
backend/src/db/: __init__.py  db.py  redis.py
backend/src/dependencies/: __init__.py  current_context.py  pagination.py  rate_limiter.py
backend/src/middleware/: __init__.py  rate_limit.py  security.py
backend/src/models/: __init__.py  app.py  base.py  config.py  news.py  notification.py  profile.py  refresh.py  request.py  role.py  session.py  social.py  user.py
backend/src/schemas/: __init__.py  app.py  auth.py  config.py  crud.py  filter.py  jwt.py  meta.py  mixins.py  news.py  notification.py  pagination.py  profile.py  rate_limiter.py  request.py  role.py  session.py  social.py  telegram.py  token.py  user.py  xui.py
backend/src/services/: __init__.py  admin.py  app.py  auth.py  config.py  crud.py  db.py  jwt.py  notification.py  password.py  rate_limiter.py  redis.py  session.py  status.py  token.py  user.py  xui.py
backend/src/utils/: __init__.py  cors.py  crud_builder.py  locale.py  meta.py  permission.py  startup.py  value_converter.py
docker/: Dockerfile  (+3 more)
(+362 files in other folders)
