[project]
name = "fastraygram"
version = "1.0.0"
description = "Fast Ray Gram API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.138.1",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]
